# Digi-Mobile

./: .gitignore  .gitmodules  ANDROID_FUZZ_BUILD_FIX.md  CMAKE_TOOLCHAIN_FIX.md  FIX_X86_BUILD_ISSUE.md  IMPLEMENTATION_CHECKLIST.md  PATCH_DETAILS.md  QUICK_START.md  README.md  README_ANDROID_FIX.md  build.gradle  init-core-and-patch.sh  repair.sh  settings.gradle  setup.sh  status.sh  stop.sh
.github/workflows/: android-build.yml  build-android-app.yml
.versions/: android.env.md  android.env.sh
android/: CMakeLists.txt  README-ANDROID-BUILD.md  gradle.properties  gradlew  gradlew.bat  toolchain-android.cmake
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/config/: digimobile-pruned.conf
android/app/src/main/java/com/digimobile/app/: ChainstateBootstrapper.kt  CoreConsoleActivity.kt  MainActivity.kt  NodeBootstrapper.kt  NodeConfigStore.kt  NodeService.kt  NodeSetupActivity.kt  SetupWizardActivity.kt  WalletActivity.kt
android/app/src/main/java/com/digimobile/node/: DigiConfigTemplate.kt  DigiMobileNodeController.java  NodeConfigOptions.kt  NodeDiagnostics.kt  NodeEnvironment.kt  NodeManager.kt  NodeManagerProvider.kt  NodeState.kt  SyncProgress.kt
android/app/src/main/res/layout/: activity_core_console.xml  activity_main.xml  activity_node_setup.xml  activity_setup_wizard.xml  activity_wallet.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/docs/: start-node-flow.md
android/java/com/digimobile/app/: MainActivity.java
android/jni/: CMakeLists.txt  digimobile_jni.cpp
android/patches/: 0001-android-fuzz-util-glibc-guard.patch  0002-android-disable-fuzz-build.patch  0003-android-force-disable-fuzz-binaries.patch
android/toolchain/: bitcoin-android-toolchain.cmake  env-setup.sh
config/: android-pruned.conf  digimobile-dev.conf  digimobile-pruned.conf
core/: README.md
core/src/test/fuzz/: util.cpp
docs/: ADVANCED-ANDROID-BUILD.md  ANDROID-BUILD.md  ANDROID-CORE-BUILD.md  ANDROID-FUZZ-BUILD-FIX.md  ANDROID-INSTALL.md  BOOTSTRAP.md  CONFIGURATION.md  CONTRIBUTING.md  CORE-SETUP.md  CORE-VERSIONING.md  ENVIRONMENT-UBUNTU-22.04.md  GETTING-STARTED-DEV.md  GETTING-STARTED-NONTECH.md  JNI-BRIDGE.md  MOBILE-INSTALL.md  OVERVIEW.md  PRUNING.md  README.md  RPC-CONSOLE.md  RUNNING-ON-DEVICE.md  SECURITY-PRIVACY.md  gradle-wrapper-conflict-resolution.md
gradle/wrapper/: gradle-wrapper.jar.base64
keys/: johnnylawdgb.asc
scripts/: build-android.sh  build-core-android.sh  clean-build.sh  common.sh  device-select.sh  fetch-core.sh  make-android-rootfs.sh  prepare-gradle-wrapper.sh  print-tree.sh  pull-logs.sh  push-node.sh  quickstart-demo.sh  rpc-console.sh  run-node.sh  setup-core.sh  stop-node.sh  verify-build-abi.sh
